--- a/style2.css
+++ b/style2.css
@@ -109,6 +109,7 @@ ul.menucs {
     padding-top: 20px;
     border-top: 1px solid #2D2D2D;
     padding-bottom: 20px;
+    background-color: #000;
 }
 
 ul.menucs a {
@@ -702,7 +703,7 @@ a.menu-act span {
     color: #2FA6FF;
 }
 .main-container {
-    max-height: 84vh;
+ 
     overflow: auto;
 }
 
